fix misalignment in submenu

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,10 +70,6 @@ nav ul {
 		position: relative;
 	}
 
-	& li:first-child {
-		margin: 0 10px 0 0;
-	}
-
 	.sub {
 		position: absolute;
 		display: none;
